Change History
==============

0.3 - Unreleased
----------------
- fixes imcompatibilities with botocore-1.12.38 later (#1)
- drop python-3.3 support, add python-3.7 support
- blackify

0.2.1 - 2017-06-14
------------------
- fixes resource cache

0.2 - 2017-06-14
----------------
- ``botocore.session.Session.create_client`` does not support threading. See: boto/botocore#1033
- per-thread cache.
- tox support.
- universal wheel support.

0.1 - 2016-04-09
----------------
- Initial release.