@@ -4,8 +4,9 @@ Change History
 0.3 - Unreleased
 ----------------
 - fixes imcompatibilities with botocore-1.12.38 later (#1)
+- include pre-requirements (``pyramid_services``)
 - drop python-3.3 support, add python-3.7 support
-- blackify
+- blackify and linted
 
 0.2.1 - 2017-06-14
 ------------------
